# LETItGo

./: .gitignore  CMakeLists.txt  Makefile  README.md  bugs.txt  experiments.sh  fixme.xml  fixme2.xml
benchmarks/: new_sample.xml  rosace.xml  sample.xml
include/: Constraint.h  ConstraintIterator.h  Execution.h  ExecutionIterator.h  InOutboundIterator.h  age_latency.h  benchmark.h  generator.h  latex.h  model.h  partial_constraint_graph.h  partial_constraint_graph_flat.h  periodicity_vector.h  repetition_vector.h  utils.h  verbose.h
logs/: parselog.ipynb
notebooks/: .gitignore  AgeLatencyBounds.ipynb  Kordon2020.ipynb
src/: CMakeLists.txt  age_latency.cpp  benchmarkAgelatency.cpp  benchmarkNewExpansion.cpp  letitgo.cpp  lig-analyse.cpp  new_partial_graph_generation.cpp  partial_constraint_graph.cpp  verbose.cpp
src/core/: LETModel.cpp  LETModel_XML.cpp  age_latency.cpp  combined_partial_expansion_graph.cpp  generator.cpp  new_partial_graph_generation.cpp  opt_new_partial_graph_generation.cpp  partial_constraint_graph.cpp  partial_lowerbound_graph.cpp  partial_upperbound_graph.cpp  repetition_vector.cpp
src/include/: age_latency.h  letitgo.h  model.h  partial_constraint_graph.h  periodicity_vector.h  utils.h  verbose.h
src/utils/: benchmark.cpp  latex.cpp  verbose.cpp
tests/: BenchmarkTest.cpp  CMakeLists.txt  DelayRandomTest.cpp  ExperimentalTest.cpp  FastExpansionTest.cpp  Figure1And2Test.cpp  GenerateSampleTest.cpp  GeneratorTest.cpp  LETModelTest.cpp  MinMaxTest.cpp  PCGLongestPathTest.cpp  PCGTest.cpp  RosaceTest.cpp  StrangeTest.cpp  benchmark_utils.h  test_utils.h
