FIND_PACKAGE(gflags REQUIRED)

INCLUDE_DIRECTORIES(${LETITGO_INCLUDE_DIR})

FILE(GLOB MAIN_SRC_FILES *.cpp)
FILE(GLOB LETITGO_SRC_FILES core/*.cpp utils/*.cpp)

ADD_LIBRARY			   (letitgo SHARED  ${LETITGO_SRC_FILES})


FOREACH(SRC_NAME ${MAIN_SRC_FILES})
  GET_FILENAME_COMPONENT(EXEC_NAME  ${SRC_NAME} NAME_WE)
  MESSAGE(STATUS "Add ${EXEC_NAME} - ${SRC_NAME}")
  ADD_EXECUTABLE(${EXEC_NAME} ${SRC_NAME})
  target_link_libraries(${EXEC_NAME} letitgo gflags)
ENDFOREACH()
