FIND_PACKAGE(gflags REQUIRED)
FIND_PACKAGE(Graphviz REQUIRED)
FIND_PACKAGE (LibXml2 REQUIRED)
find_package(OpenMP REQUIRED)

INCLUDE_DIRECTORIES(${LETITGO_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${GRAPHVIZ_INCLUDE_DIRS})
INCLUDE_DIRECTORIES (${LIBXML2_INCLUDE_DIR})

FILE(GLOB MAIN_SRC_FILES *.cpp)
FILE(GLOB LETITGO_SRC_FILES core/*.cpp utils/*.cpp)

ADD_LIBRARY			   (letitgo SHARED  ${LETITGO_SRC_FILES})
TARGET_LINK_LIBRARIES  (letitgo PUBLIC  ${GRAPHVIZ_GVC_LIBRARY} ${GRAPHVIZ_CGRAPH_LIBRARY} ${LIBXML2_LIBRARIES})

if(OpenMP_CXX_FOUND)
  TARGET_LINK_LIBRARIES(letitgo PUBLIC OpenMP::OpenMP_CXX)
endif()

FOREACH(SRC_NAME ${MAIN_SRC_FILES})
  GET_FILENAME_COMPONENT(EXEC_NAME  ${SRC_NAME} NAME_WE)
  MESSAGE(STATUS "Add ${EXEC_NAME} - ${SRC_NAME}")
  ADD_EXECUTABLE(${EXEC_NAME} ${SRC_NAME})
  target_link_libraries(${EXEC_NAME} letitgo gflags)
ENDFOREACH()
